// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/songs/SongList.vue snapshot test { loading: false, songs: [songs] } renders "Edit" column if admin 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              MAKE IT BETTER
            </a></td>
          <td data-label="アーティスト" class="">
            mitsu-O!
          </td>
          <td data-label="BPM" class="">
            119
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              PARANOiA
            </a></td>
          <td data-label="アーティスト" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              TRIP MACHINE
            </a></td>
          <td data-label="アーティスト" class="">
            DE-SIRE
          </td>
          <td data-label="BPM" class="">
            160
          </td>
          <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
          <!---->
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue snapshot test { locale: "en", loading: false, songs: [] } renders empty state 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr class="is-empty">
          <td colspan="0">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>No Data</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue snapshot test { locale: "en", loading: false, songs: [songs] } renders song list 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Version" class="">
            1st
          </td>
          <td data-label="Name" class=""><a>
              MAKE IT BETTER
            </a></td>
          <td data-label="Artist" class="">
            mitsu-O!
          </td>
          <td data-label="BPM" class="">
            119
          </td>
          <!---->
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Version" class="">
            1st
          </td>
          <td data-label="Name" class=""><a>
              PARANOiA
            </a></td>
          <td data-label="Artist" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <!---->
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="Version" class="">
            1st
          </td>
          <td data-label="Name" class=""><a>
              TRIP MACHINE
            </a></td>
          <td data-label="Artist" class="">
            DE-SIRE
          </td>
          <td data-label="BPM" class="">
            160
          </td>
          <!---->
          <!---->
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue snapshot test { locale: "en", loading: true, songs: [] } renders loading state 1`] = `
<div class="b-table is-loading">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr class="is-empty">
          <td colspan="0">
            <section class="section">
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue snapshot test { locale: "ja", loading: false, songs: [] } renders empty state 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr class="is-empty">
          <td colspan="0">
            <section class="section">
              <div class="content has-text-grey has-text-centered">
                <p>データがありません</p>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue snapshot test { locale: "ja", loading: false, songs: [songs] } renders song list 1`] = `
<div class="b-table">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              MAKE IT BETTER
            </a></td>
          <td data-label="アーティスト" class="">
            mitsu-O!
          </td>
          <td data-label="BPM" class="">
            119
          </td>
          <!---->
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              PARANOiA
            </a></td>
          <td data-label="アーティスト" class="">
            180
          </td>
          <td data-label="BPM" class="">
            180
          </td>
          <!---->
          <!---->
        </tr>
        <!---->
        <!---->
        <tr draggable="false" class="">
          <!---->
          <!---->
          <td data-label="バージョン" class="">
            1st
          </td>
          <td data-label="曲名" class=""><a>
              TRIP MACHINE
            </a></td>
          <td data-label="アーティスト" class="">
            DE-SIRE
          </td>
          <td data-label="BPM" class="">
            160
          </td>
          <!---->
          <!---->
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`/components/pages/songs/SongList.vue snapshot test { locale: "ja", loading: true, songs: [] } renders loading state 1`] = `
<div class="b-table is-loading">
  <!---->
  <!---->
  <div class="table-wrapper">
    <table class="table is-striped">
      <!---->
      <tbody>
        <tr class="is-empty">
          <td colspan="0">
            <section class="section">
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
              <div class="b-skeleton is-animated">
                <div class="b-skeleton-item is-rounded"></div>
              </div>
            </section>
          </td>
        </tr>
      </tbody>
      <!---->
    </table>
  </div>
  <div class="level">
    <div class="level-left"></div>
    <div class="level-right">
      <div class="level-item">
        <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
          <ul class="pagination-list">
            <!---->
            <!---->
            <!---->
            <!---->
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
